// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupLayout defaults to SignupMainForm if no page prop is given 1`] = `
<div>
  <div
    data-testid="mock-theme"
  >
    <div
      data-testid="mock-theme"
    >
      <main
        class="SignupLayout__SignupLayoutWrapper-sc-17nyy42-0 exFDKZ"
        role="main"
      >
        <div
          class="innerDiv1"
        >
          <div
            class="innerDiv2"
          >
            <div
              class="signupBox"
            >
              <div
                data-testid="signup-main-form"
              >
                {"emailOrPhone":"","fullName":"","userName":"","password":"","emailOrPhone_valid":false,"fullName_valid":false,"userName_valid":false,"password_valid":false}
              </div>
            </div>
            <div
              class="signupBox"
              style="padding: 20px 0px;"
            >
              Have an account? 
              <a
                data-testid="styled-link"
                href="/login"
              >
                Log In
              </a>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`SignupLayout renders BirthdayForm on page 1 1`] = `
<div>
  <div
    data-testid="mock-theme"
  >
    <div
      data-testid="mock-theme"
    >
      <main
        class="SignupLayout__SignupLayoutWrapper-sc-17nyy42-0 exFDKZ"
        role="main"
      >
        <div
          class="innerDiv1"
        >
          <div
            class="innerDiv2"
          >
            <div
              class="signupBox"
            >
              <div
                data-testid="birthday-form"
              >
                {"showBirthdayModal":false,"date_valid":false,"day":1,"month":1,"year":2025}
              </div>
            </div>
            <div
              class="signupBox"
              style="padding: 20px 0px;"
            >
              Have an account? 
              <a
                data-testid="styled-link"
                href="/login"
              >
                Log In
              </a>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`SignupLayout renders ConfirmationCodeForm on page 2 1`] = `
<div>
  <div
    data-testid="mock-theme"
  >
    <div
      data-testid="mock-theme"
    >
      <main
        class="SignupLayout__SignupLayoutWrapper-sc-17nyy42-0 exFDKZ"
        role="main"
      >
        <div
          class="innerDiv1"
        >
          <div
            class="innerDiv2"
          >
            <div
              class="signupBox"
            >
              <div
                data-testid="confirmation-code-form"
              >
                {"confirmationCode":"","confirmationCode_valid":false,"emailOrPhone":"","fullName":"","userName":"","password":"","day":1,"month":1,"year":2025}
              </div>
            </div>
            <div
              class="signupBox"
              style="padding: 20px 0px;"
            >
              Have an account? 
              <a
                data-testid="styled-link"
                href="/login"
              >
                Log In
              </a>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`SignupLayout renders SignupMainForm on page 0 1`] = `
<div>
  <div
    data-testid="mock-theme"
  >
    <div
      data-testid="mock-theme"
    >
      <main
        class="SignupLayout__SignupLayoutWrapper-sc-17nyy42-0 exFDKZ"
        role="main"
      >
        <div
          class="innerDiv1"
        >
          <div
            class="innerDiv2"
          >
            <div
              class="signupBox"
            >
              <div
                data-testid="signup-main-form"
              >
                {"emailOrPhone":"","fullName":"","userName":"","password":"","emailOrPhone_valid":false,"fullName_valid":false,"userName_valid":false,"password_valid":false}
              </div>
            </div>
            <div
              class="signupBox"
              style="padding: 20px 0px;"
            >
              Have an account? 
              <a
                data-testid="styled-link"
                href="/login"
              >
                Log In
              </a>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
